2004-08-21  Michael Yount <csf@moscow.com>

	* bin/mj_wwwusr:  Ask for a list name or login as needed
	instead of displaying an error message.
	Thanks to Steven Orr.

2004-08-09  Michael Yount <csf@moscow.com>

	* lib/Mj/Resend.pm:  (post)  Initialize the admin and
	taboo access variables.

2004-08-03  Michael Yount <csf@moscow.com>

	* lib/Mj/Resend.pm:  (do_digests)  Bugfix:  Override the
	SENDER substitution using the actual sender.
	Thanks to Dean Collins.

2004-07-12  Michael Yount <csf@moscow.com>

	* setup/setup_func.pl:  (read_mj_config)  Allow values
	to be read from an installed .mj_config file.
	Thanks to Peter Ajamian.

2004-07-11  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_createlist)  Copy the MTA options
	to avoid persistently changing them in "nocreate" mode.
	Thanks to Darren Stalder.

	* setup/query_util.pl:  (get_passwd)  Do not allow commas
	in passwords.
	Thanks to Darren Stalder.

	* setup/setup_func.pl:  (install_response_files)  Install
	the setup scripts to allow site/domain reconfiguration
	outside the source directory.

2004-07-10  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  Version number is now 0.1200407100.

	* lib/Mj/Parser.pm:  (parse_part)  Support the SESSIONID
	substitution in the command summary.

	* lib/Mj/Resend.pm:  (_check_approval)  Issue an error
	if an "Approved" line is not followed by a blank line
	or a valid e-mail header.

2004-06-28  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_changeaddr)  Allow two addresses
	with identical xforms, which are not aliases, to be
	used.  Thanks to SRE.

2004-06-26  Michael Yount <csf@moscow.com>

	* lib/Mj/BounceParser.pm:  Add various sanity checks.
	Thanks to SRE.

2004-06-22  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_rekey)  Bugfix:  Take bookkeeping
	aliases into account when rekeying the alias database.
	Thanks to SRE.

	* lib/Mj/List.pm:  (aux_rekey)  Bugfix:  Rekey based
	upon the stripped address, to allow xforms to be reversed.